--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "redis": "^2.7.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.0.1",
+    "serialize-javascript": "^1.5.0",
     "webpack": "^4.1.0",
     "webpack-dev-middleware": "^3.0.0",
     "webpack-hot-middleware": "^2.21.2"
